[metadata]
name = dockergpio
version = 1.0.0
description = docker usage of gpio through character device
long_description = file:README.me
long_description_content_type = text/markdown
author = Brian Vanderbusch
author_email = chief@hackerhappyhour.com
url = https://github.com/LongLiveCHIEF/docker-pi-gpio
python_requires = >= 3.5
install_requires =
    python-periphery
    wheel
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python
    Programming Language :: Python 3
    Programming Language :: Python 3.5
    Programming Language :: Python 3.6
    Programming Language :: Python 3.7
    Programming Language :: Python 3.8
    Operating System :: Linux

[options]
packages = find: